add perceptron oop

--- a/ch2_nn/hw.ipynb
+++ b/ch2_nn/hw.ipynb
@@ -448,11 +448,11 @@
     "        for b, w in zip(self._biases, self._weights):\n",
     "            # 利用 z = wt*x+b 依次计算网络的输出\n",
     "            z = np.dot(w, activation) + b\n",
-    "            zs.append(z)\n",
+    "            zs.append(z) # result of linear combination\n",
     "            # 将每个神经元的输出z通过激活函数sigmoid\n",
     "            activation = sigmoid(z)\n",
     "            # 将激活值放入列表中暂存\n",
-    "            activations.append(activation)\n",
+    "            activations.append(activation) # result of activation\n",
     "        \n",
     "        # 反向传播过程\n",
     "\n",
